# OwnNotes

./: .gitignore  docker-compose.yml  reset-db.sh
backend/: .dockerignore  Cargo.toml  authMiddleware.ts  key.ts  models.ts  routes.ts  server.ts  utils.ts
backend/migrations/2020-03-26-084736_create_people/: up.sql
backend/src/: main.rs  schema.rs  user.rs
backend/views/: home.ejs  login.ejs
www/: package.json
www/public/: index.html
www/src/: App.tsx
www/src/components/: EditNote.tsx  Home.tsx  ListNotes.tsx  Login.tsx  Register.tsx
www/src/style/: index.css
www/src/utils/: auth.ts  fetchApi.ts
